@@ -57,6 +57,7 @@
 extern FILE        *cdecl_fin;          ///< File in.
 extern FILE        *cdecl_fout;         ///< File out.
 extern bool         cdecl_initialized;  ///< Initialized (read conf. file)?
+extern bool         cdecl_interactive;  ///< Interactive (connected to a tty)?
 extern cdecl_mode_t cdecl_mode;         ///< Converting English or gibberish?
 extern char const  *me;                 ///< Program name.
 
